--- a/index.html
+++ b/index.html
@@ -2,18 +2,30 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Amor de Cão - Desenvolvido por devadossantos - </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./_estilo/style_index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap" rel="stylesheet">
+    <title>Intranet - DesenvolvimentoBR</title>
 </head>
 <body>
-<h1>Cão, Cachorro:</h1>
-<h2>Origem:</h2>
-<p>O cão (nome científico: Canis lupus familiaris), no Brasil também chamado de cachorro, é um mamífero carnívoro da família dos canídeos, subespécie do lobo, e talvez o mais antigo animal domesticado pelo ser humano. Teorias postulam que surgiu do lobo cinzento no continente asiático há mais de 100 000 anos. Ao longo dos séculos, através da domesticação, o ser humano realizou uma seleção artificial dos cães por suas aptidões, características físicas ou tipos de comportamento. O resultado foi uma grande diversidade de raças caninas, as quais variam em pelagem e tamanho dentro de suas próprias raças, atualmente classificadas em diferentes grupos ou categorias. As designações vira-lata (no Brasil) ou rafeiro (em Portugal) são dadas aos cães sem raça definida ou mestiços descendentes.</p>
-
-<p>Com expectativa de vida que varia entre dez e vinte anos, o cão é um animal social que, na maioria das vezes, aceita o seu dono como o "chefe da matilha" e possui várias características que o tornam de grande utilidade para o homem. Possui excelente olfato e audição, é bom caçador e corredor vigoroso, relativamente dócil e leal, inteligente e com boa capacidade de aprendizagem. Deste modo, o cão pode ser adestrado para executar um grande número de tarefas úteis, como um cão de caça, de guarda ou pastor de rebanhos, por exemplo. Assim como o ser humano, também é vítima de doenças como o resfriado, a depressão e o mal de Alzheimer, bem como das características do envelhecimento, como problemas de visão e audição, artrite e mudanças de humor.</p>
-
-<p>A afeição e a companhia deste animal são alguns dos motivos da famosa frase: "O cão é o melhor amigo do homem", já que não há registro de amizade tão forte e duradoura entre espécies distintas quanto a de humano e cão. Esta relação figura em filmes, livros e revistas, que citam, inclusive, diferentes relatos reais de diferentes épocas e em várias nações. Entre os cães mais famosos que viveram e marcaram sociedades estão Balto, Laika e Hachiko. Na mitologia, o Cérbero é dito um dos mais assustadores seres. No cinema, Lassie é um dos mais difundidos nomes e, na animação, Pluto, Snoopy e Scooby-Doo há décadas fazem parte da infância de várias gerações.</p>
-
-
-<button><a href="https://www.linkedin.com/in/anisio-gustavo-493570230" target="_blank">Linkedin</a></button> <button><a href="https://github.com/devadossantos">GitHub</button> <button><a href="mailto:anisio.gustavo@outlook.com" target="_blank">E-mail</button> <button><a href="+5571986434831">Whatspp</button>
+    <div class="titulo">
+        <h1>- DesenvolvimentoBR- </h1>
+    </div>
+    <div class="box_user_pass">
+        <img src="./_imagens/tela_acesso.jpg">
+        <h1>Portal DesenvolvimentoBR - Entre com seu login</h1>
+        <form action="">
+        <input id="campo" type="text" name="f_username" placeholder="USUARIO"><br>
+        <input id="campo" type="password" name="f_password" placeholder="SENHA"><br>
+        <input id="enviar" type="submit" name="f_enviar">
+        </form>
+        <a href="./esquecasenha.html">Esqueceu a senha?</a><br>
+        <a href="./criarlogin.html">Primeiro acesso?</a>
+    </div>
+    <footer id="rodape">
+        <p>Desenvolvido por Anisio Gustavo Estudante de Eng.Software 2022</p>
+    </footer>
 </body>
 </html>
