--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="box_user_pass">
         <img src="./_imagens/tela_acesso.jpg">
         <h1>Portal DesenvolvimentoBR - Entre com seu login</h1>
-        <form action="">
+        <form class="dados" name="f_login" action="#" method="get">
         <input id="campo" type="text" name="f_username" placeholder="USUARIO"><br>
         <input id="campo" type="password" name="f_password" placeholder="SENHA"><br>
         <input id="enviar" type="submit" name="f_enviar">
         </form>
-        <a href="./esquecasenha.html">Esqueceu a senha?</a><br>
-        <a href="./criarlogin.html">Primeiro acesso?</a>
+        <a href="./forgot_password.html">Esqueceu a senha?</a><br>
+        <a href="./new_user.html">Primeiro acesso?</a>
     </div>
     <footer id="rodape">
-        <p>Desenvolvido por Anisio Gustavo Estudante de Eng.Software 2022</p>
+        <a href="https://github.com/devadossantos">Desenvolvido por Anisio Gustavo Estudante de Eng.Software 2022</a>
     </footer>
 </body>
 </html>
