--- a/Responsivo/index.html
+++ b/Responsivo/index.html
@@ -1,116 +1,30 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="container-fluid bg-dark">
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/home.html">Portal B2B</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Indicadores
-                  </a>  
-                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Indicadores</a></li>
-                  <li><a class="dropdown-item" href="#">Prazo por posto</a></li>
-                  <li><a class="dropdown-item" href="#">TMR por Posto</a></li>
-                  </ul>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Bd Online
-                </a>  
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Bd Online</a></li>
-                <li><a class="dropdown-item" href="#">Pendencias Online</a></li>
-                <li><a class="dropdown-item" href="#">Encerradas Online</a></li>
-                <li><a class="dropdown-item" href="#">Diario de Bordo</a></li>
-                <li><a class="dropdown-item" href="#">Preventivas</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Bd Offline
-                </a>  
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Analitico</a></li>
-                <li><a class="dropdown-item" href="#">FTTC</a></li>
-                <li><a class="dropdown-item" href="#">Circuitos Ofensores</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Serviços
-                </a>  
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">.NET</a></li>
-                <li><a class="dropdown-item" href="#">Django</a></li>
-                <li><a class="dropdown-item" href="https://getbootstrap.com/">Bootstrap</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Planta
-                </a>  
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Imagens</a></li>
-                <li><a class="dropdown-item" href="#">Sons</a></li>
-                <li><a class="dropdown-item" href="#">Texto</a></li>
-                </ul>
-              </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Material
-                  </a>  
-                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">.NET</a></li>
-                  <li><a class="dropdown-item" href="#">Django</a></li>
-                  <li><a class="dropdown-item" href="https://getbootstrap.com/">Bootstrap</a></li>
-                  </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Suporte
-                </a>  
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">.NET</a></li>
-                <li><a class="dropdown-item" href="#">Django</a></li>
-                <li><a class="dropdown-item" href="https://getbootstrap.com/">Bootstrap</a></li>
-                </ul>
-              </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Material
-                  </a>  
-                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">.NET</a></li>
-                  <li><a class="dropdown-item" href="#">Django</a></li>
-                  <li><a class="dropdown-item" href="https://getbootstrap.com/">Bootstrap</a></li>
-                  </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Material
-                </a>  
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">.NET</a></li>
-                <li><a class="dropdown-item" href="#">Django</a></li>
-                <li><a class="dropdown-item" href="https://getbootstrap.com/">Bootstrap</a></li>
-                </ul>
-              </li>
-          </div>
-        </div>
-      </nav>
-      </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Treinamento de JS</title>
+</head>
+<body>
+  <script>
+  var nota1 = 100;
+  var nota2 = 100;
+  var nota3 = 0;
+  media = (nota1+nota2+nota3)/3;
+  if(media>=60){
+    if (media==100)
+    document.write("O Aluno está super aprovado com media "+media)
+    else{
+    document.write("O Aluno está aprovado com media "+media) 
+    }
+  }
+  else if((media>=40) && (media<=50)){
+    document.write("O Aluno esta na recuperação com media "+media)
+  }
+  else{
+    document.write("O Aluno esta reprovado com media "+media)
+  }
+  </script>
+</body>
 </html>
