Atualização - Anisio - 22/fev

--- a/jogo_Killer.html
+++ b/jogo_Killer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poor+Story&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/style.css">
     <title>- Portal do Gamer - Super Mario World - SNES</title>
 </head>
@@ -13,15 +13,15 @@
         <a href="./index.html"><li id="menu2">Pagina Inicial</li></a>
         </ol>
     <a href="./index.html"><img id="menu" src="./_imagens/Portal_logo.png"></a>
-    <img id="mariofundo" src="./_imagens/mariosemfundo.png">
-    <img id="mariofundo2" src="./_imagens/mariosemfundo2.png">
+    <img id="mariofundo" src="./_imagens/Killersemfundo1.png">
+    <img id="mariofundo2" src="./_imagens/Killersemfundo2.png">
     <div id="som">
         <p>Escute a musica tema do jogo:</p>
     <audio src="./_audio/Killer Instinct.mp3" controls loop></audio>
     </div>
     <div class="descricao_mario">
     <img src="./_imagens/Kiler_descrição.jpg">
-    <a href="#"><img id="botao" src="./_imagens/botao1.png"></a>
+    <a href="./_Downloads/Killer Instinct (USA) (Rev 1).zip"><img id="botao" src="./_imagens/botao1.png"></a>
     <ul id="mario_info">
         <li id="mario_info">Desenvolvedora(s)	Nintendo Entertainment Analysis & Development</li>
         <li id="mario_info">Publicadora(s)	Nintendo</li>
@@ -32,12 +32,12 @@
     </div>
     <div class="imagens_mario">
         <p>Fotos do game</p>
-        <img id="fotomario1" src="./_imagens/super-mario-world1.jpg">
-        <img id="fotomario2"src="./_imagens/super-mario-world2.jpg">
-        <img id="fotomario3"src="./_imagens/super-mario-world3.jpg">
-        <img id="fotomario4"src="./_imagens/super-mario-world4.jpg">
-        <img id="fotomario5"src="./_imagens/super-mario-world5.jpg">
-        <img id="fotomario6"src="./_imagens/super-mario-world6.jpg">
+        <img id="fotomario1" src="./_imagens/killer1.jpg">
+        <img id="fotomario2"src="./_imagens/killer2.jpg">
+        <img id="fotomario3"src="./_imagens/killer3.jpg">
+        <img id="fotomario4"src="./_imagens/killer4.jpg">
+        <img id="fotomario5"src="./_imagens/killer5.jpg">
+        <img id="fotomario6"src="./_imagens/killer6.jpg">
         
     </div>
       <footer id="rodape">
