--- a/jogo_metroid.html
+++ b/jogo_metroid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poor+Story&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/style.css">
     <title>- Portal do Gamer - Super Mario World - SNES</title>
 </head>
@@ -21,7 +21,7 @@
     </div>
     <div class="descricao_mario">
     <img src="./_imagens/Metroid_descriçao.jpg">
-    <a href="#"><img id="botao" src="./_imagens/botao1.png"></a>
+    <a href="/_Downloads/Super Metroid (Japan, USA) (En,Ja).zip"><img id="botao" src="./_imagens/botao1.png"></a>
     <ul id="mario_info">
         <li id="mario_info">Desenvolvedora(s)	Nintendo Research& Development 1 Intelligent Systems</li>
         <li id="mario_info">Publicadora(s)	Nintendo</li>
