--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poor+Story&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
     <title>- PortalGamer🎮 - O seu portal de jogos </title>
   </head>
   <body>
    <ol id="menu1">
-      <a href="#"><li id="menu2">Pagina Inicial</li></a>
-      <a href="#"><li id="menu2">Rooms</li></a>
-      <a href="#"><li id="menu2">Jogos APK</li></a>
-      <a href="#"><li id="menu2">Aplicativos</li></a>
-      <a href="#"><li id="menu2">Wallpapers</li></a>
+      <a href="./roms.html"><li id="menu2">Roms</li></a>
+      <a href="./emuladores.html"><li id="menu2">Emuladores</li></a>
+      <a href="./jogosapk.html"><li id="menu2">Jogos APK</li></a>
       <a href="./formulario_contato.html"><li id="menu2">Contato</li></a>
       </ol>
   <a href="./index.html"><img id="menu" src="./_imagens/Portal_logo.png"></a>
@@ -32,15 +29,15 @@
       </tr>
          <th>1</th><th>Super Mario World</th><th>Super Nintendo</th>
       </tr>
-         <th>2</th><th>Forza Horizon 5</th><th>Xbox/PC</th>
+         <th>2</th><th>Super Metroid</th><th>Super Nintendo</th>
       </tr>
-         <th>3</th><th>Killer Instinct</th><th>Xbox</th>
+         <th>3</th><th>Killer Instinct</th><th>Super Nintendo</th>
       </tr>
-         <th>4</th><th>Mu Online</th><th>PC</th>
+         <th>4</th><th>Top Gear</th><th>Super Nintendo</th>
       </tr>
-      <th>5</th><th>Minicraft</th><th>PC</th>
+      <th>5</th><th>Donkey Kong</th><th>Super Nintendo</th>
       </tr>
-       <th>5</th><th>Bomberman</th><th>Nintendo</th>
+       <th>6</th><th>Bomberman 4</th><th>Super Nintendo</th>
 </tr>
   </table>
   <footer id="rodape">
