--- a/jogo_mario.html
+++ b/jogo_mario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poor+Story&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/style.css">
     <title>- Portal do Gamer - Super Mario World - SNES</title>
 </head>
