--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poor+Story&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/style.css">
     <title>- PortalGamer🎮 - O seu portal de jogos </title>
   </head>
@@ -14,7 +15,7 @@
       <a href="./jogosapk.html"><li id="menu2">Jogos APK</li></a>
       <a href="./formulario_contato.html"><li id="menu2">Contato</li></a>
       </ol>
-  <a href="./index.html"><img id="menu" src="./_imagens/Portal_logo.png"></a>
+  <img id="background1" src="./_imagens/devadossantos.jpg">
   <img id="background" src="./_imagens/basquete.png">
   <a href="./jogo_mario.html"><img id="jogo" src="./_imagens/jogo1.jpg"></a>
   <a href="./jogo_metroid.html"><img id="jogo2" src="./_imagens/metroid1.jpg"></a>
