--- a/jogo_mario.html
+++ b/jogo_mario.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poor+Story&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/style.css">
     <title>- Portal do Gamer - Super Mario World - SNES</title>
 </head>
 <body>
     <ol id="menu1">
-        <a href="./index.html"><li id="menu2">Pagina Inicial</li></a>
+        <a href="./index.html"><li id="menu2">Voltar</li></a>
         </ol>
-    <a href="./index.html"><img id="menu" src="./_imagens/Portal_logo.png"></a>
     <img id="mariofundo" src="./_imagens/mariosemfundo.png">
     <img id="mariofundo2" src="./_imagens/mariosemfundo2.png">
     <div id="som">
