--- a/roms.html
+++ b/roms.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./_style/styleroms.css">
-    <title>>- PortalGamer🎮 - Roms</title>
+    <title>- PortalGamer🎮 - Roms</title>
 </head>
 <body>
-    <h1>Em Desenvolvimento <br> Dev Anisio Gustavo</h1>
+    <h1>Em desenvolvimento <br> Dev Anisio Gustavo</h1>
+    <a href="./index.html"><button class="butao">voltar</button></a>
 </body>
 </html>
