--- a/jogo_Killer.html
+++ b/jogo_Killer.html
@@ -17,7 +17,7 @@
     <img id="mariofundo2" src="./_imagens/Killersemfundo2.png">
     <div id="som">
         <p>Escute a musica tema do jogo:</p>
-    <audio src="./_audio/Killer Instinct.mp3" controls loop></audio>
+    <audio src="./_audio/Killer Instinct.mp3" controls loop autoplay></audio>
     </div>
     <div class="descricao_mario">
     <img src="./_imagens/Kiler_descrição.jpg">
