--- a/jogo_metroid.html
+++ b/jogo_metroid.html
@@ -17,7 +17,7 @@
     <img id="mariofundo2" src="./_imagens/metroidsemfundo2.png">
     <div id="som">
         <p>Escute a musica tema do jogo:</p>
-    <audio src="./_audio/Super Metroid.mp3" controls loop></audio>
+    <audio src="./_audio/Super Metroid.mp3" controls autoplay loop></audio>
     </div>
     <div class="descricao_mario">
     <img src="./_imagens/Metroid_descriçao.jpg">
