--- a/jogo_mario.html
+++ b/jogo_mario.html
@@ -17,7 +17,7 @@
     <img id="mariofundo2" src="./_imagens/mariosemfundo2.png">
     <div id="som">
         <p>Escute a musica tema do jogo:</p>
-    <audio src="./_audio/Super Mario.mp3" controls loop></audio>
+    <audio src="./_audio/Super Mario.mp3" controls autoplay loop></audio>
     </div>
     <div class="descricao_mario">
     <img src="./_imagens/Mario_descriçao.jpg">
