adaptando com resposividade

--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./_style/style.css">
+    <link rel="stylesheet" href="./_style/style_index.css">
     <title>- PortalGamer🎮 - O seu portal de jogos </title>
   </head>
   <body>
+     <header>
+        <Nav>
    <ol id="menu1">
       <a href="./roms.html"><li id="menu2">Roms</li></a>
       <a href="./emuladores.html"><li id="menu2">Emuladores</li></a>
       <a href="./jogosapk.html"><li id="menu2">Jogos APK</li></a>
       <a href="./formulario_contato.html"><li id="menu2">Contato</li></a>
       </ol>
+   </Nav>
+   </header>
   <img id="background1" src="./_imagens/devadossantos.jpg">
   <img id="background" src="./_imagens/basquete.png">
   <a href="./jogo_mario.html"><img id="jogo" src="./_imagens/jogo1.jpg"></a>
