--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    </header>
   <img id="background1" src="./_imagens/devadossantos.jpg">
   <img id="background" src="./_imagens/basquete.png">
-  <a href="./jogo_mario.html"><img id="jogo" src="./_imagens/jogo1.jpg"></a>
+  <a href="./jogo_mario.html"><img id="jogo1" src="./_imagens/jogo1.jpg"></a>
   <a href="./jogo_metroid.html"><img id="jogo2" src="./_imagens/metroid1.jpg"></a>
   <a href="./jogo_Killer.html"><img id="jogo3" src="./_imagens/jogo3.jpg"></a>
   <img id="jogo4" src="./_imagens/jogo4.jpg">
