--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/style_index.css">
     <title>- PortalGamer🎮 - O seu portal de jogos </title>
@@ -16,18 +15,21 @@
       <a href="./emuladores.html"><li id="menu2">Emuladores</li></a>
       <a href="./jogosapk.html"><li id="menu2">Jogos APK</li></a>
       <a href="./formulario_contato.html"><li id="menu2">Contato</li></a>
+      <a href="./portifolio.html"><li id="menu2">Portifolio</li></a>
       </ol>
    </Nav>
    </header>
+   <section>
   <img id="background1" src="./_imagens/devadossantos.jpg">
   <img id="background" src="./_imagens/basquete.png">
   <a href="./jogo_mario.html"><img id="jogo1" src="./_imagens/jogo1.jpg"></a>
   <a href="./jogo_metroid.html"><img id="jogo2" src="./_imagens/metroid1.jpg"></a>
   <a href="./jogo_Killer.html"><img id="jogo3" src="./_imagens/jogo3.jpg"></a>
-  <img id="jogo4" src="./_imagens/jogo4.jpg">
-  <img id="jogo5" src="./_imagens/jogo5.jpg">
-  <img id="jogo6" src="./_imagens/jogo6.jpg">
-
+  <a href="./jogo_topgear.html"><img id="jogo4" src="./_imagens/jogo4.jpg"></a>
+  <a href="./jogo_donkeykong.html"><img id="jogo5" src="./_imagens/jogo5.jpg"></a>
+  <a href="./jogo_bomberman.html"><img id="jogo6" src="./_imagens/jogo6.jpg"></a>
+</section>
+<section>
   <table id="tabela">
 
          <th>Posicão</th><th>Jogo</th><th>Plataforma</th>
@@ -45,6 +47,7 @@
        <th>6</th><th>Bomberman 4</th><th>Super Nintendo</th>
 </tr>
   </table>
+</section>
   <footer id="rodape">
  <p>Desenvolvido por Anisio Gustavo - Estudante de Eng.Software</p>
   </footer>
