--- a/jogo_bomberman.html
+++ b/jogo_bomberman.html
@@ -32,12 +32,12 @@
     </div>
     <div class="imagens_mario">
         <p>Fotos do game</p>
-        <img id="fotomario1" src="./_imagens/killer1.jpg">
-        <img id="fotomario2"src="./_imagens/killer2.jpg">
-        <img id="fotomario3"src="./_imagens/killer3.jpg">
-        <img id="fotomario4"src="./_imagens/killer4.jpg">
-        <img id="fotomario5"src="./_imagens/killer5.jpg">
-        <img id="fotomario6"src="./_imagens/killer6.jpg">
+        <img id="fotomario1" src="./_imagens/bomber1.jpg">
+        <img id="fotomario2"src="./_imagens/bomber2.jpg">
+        <img id="fotomario3"src="./_imagens/bomber3.jpg">
+        <img id="fotomario4"src="./_imagens/bomber4.jpg">
+        <img id="fotomario5"src="./_imagens/bomber5.jpg">
+        <img id="fotomario6"src="./_imagens/bomber6.jpg">
         
     </div>
       <footer id="rodape">
