--- a/emuladores.html
+++ b/emuladores.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/styleemulador.css">
-    <title>- PortalGamer🎮 - Emuladores </title>
+    <title>- PortalGamer🎮 - Emuladores</title>
 </head>
 <body>
-    <h1>Em desenvolvimento <br> Dev Anisio Gustavo</h1>
-    <a href="./index.html"><button class="butao">voltar</button></a>
+    <ol id="menu1">
+        <a href="./index.html"><li id="menu2">Voltar</li></a>
+        </ol>
+        <img id="background" src="./_imagens/basquete2.png">
+        <img id="background1" src="./_imagens/devadossantos.jpg">
+
+            <img class="emulador1" src="./_imagens/emulador1.png">
+            <img class="emulador2" src="./_imagens/emulador2.png">
+            <img class="emulador3" src="./_imagens/emulador3.png">
+            <img class="emulador4" src="./_imagens/emulador4.png">
+            <img class="emulador5" src="./_imagens/emulador5.jpg">
+            <img class="emulador6" src="./_imagens/emulador6.png">
+
+
+    <footer id="rodape">
+        <p>Desenvolvido por Anisio Gustavo - Estudante de Eng.Software</p>
+         </footer>
 </body>
 </html>
