--- a/formulario_contato.html
+++ b/formulario_contato.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./_style/Style_formulario.css">
-    <title>Fale com a Portal Gamer</title>
+    <title>Fale com a PortalGamer🎮 </title>
 </head>
 <body>
     <H1>Deixe seu recado para a PortalGamer</H1>
