--- a/jogo_donkeykong.html
+++ b/jogo_donkeykong.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/Style_top6_index.css">
-    <title>- Portal do Gamer - Super Mario World - SNES</title>
+    <title>- PortalGamer🎮 - Donkey Kong - SNES</title>
 </head>
 <body>
     <ol id="menu1">
