--- a/jogo_mario.html
+++ b/jogo_mario.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./_style/Style_top6_index.css">
-    <title>- Portal do Gamer - Super Mario World - SNES</title>
+    <title>- PortalGamer🎮 - Super Mario World - SNES</title>
 </head>
 <body>
     <ol id="menu1">
