--- a/teste.html
+++ b/teste.html
@@ -1,184 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
-    <title>Document</title>
     <style>
-        *{
-          padding: 0;
-          margin: 0;
-          
+        #id1{
+            float: left;
         }
-        body{
-            width: 100%;
-            flex-direction: column;
-            display: flex;
-            flex-wrap: wrap;
-            background-color: black;
-        }
-        .adossantos{
-            display: flex;
-            width: 100%;
-            justify-content: flex-start;
-            flex-wrap: wrap;
-        }
+        #id2{
 
-        /* START MENU ...............................*/ 
-        header{
-            background-color: purple;
-        }
-        .navegacao{
-            border: 1px solid black;
-            display: flex;
-            justify-content:space-around;
-            background-color: purple;
-            width: 100%;
-        }
-        .menu{
-            display: flex;
-            list-style: none;
-            flex-wrap: wrap;
-            width: 100%; 
-        }
-        .itens{
-            font-size: 20px;
-            margin: 25px;
-            font-family: 'Press Start 2P', cursive;
-            color: white;
-            transition: color 0.5s;
-            display: flex;
-        }
-        a{
-         text-decoration: none;
-        }
-        .itens:hover{
-            color: aqua;
-        }
-        /* END MENU ...............................*/ 
-
-        .top6{
-            width: 650px;
-            height: 420px;
-            margin-left: 20px;
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .jogo1{
-            margin-left: 10px;
-            border-radius: 20px;
-            display: flex;
-            width: 200px;
-            height: 200px;
-            border: solid 1px white;
-        }
-        .jogo1 img{
-            width: 100%;
-            border-radius: 20px;
-        }
-        .jogo2{
-            margin-left: 10px;
-            border-radius: 20px;
-            display: flex;
-            width: 200px;
-            height: 200px;
-            border: solid 1px white;
-        }
-        .jogo2 img{
-            width: 100%;
-            border-radius: 20px;
-        }        
-        .jogo3{
-            margin-left: 10px;
-            border-radius: 20px;
-            display: flex;
-            width: 200px;
-            height: 200px;
-            border: solid 1px white;
-        }
-        .jogo3 img{
-            width: 100%;
-            border-radius: 20px;
-        }    
-        .jogo4{
-            margin-left: 10px;
-            border-radius: 20px;
-            display: flex;
-            width: 200px;
-            height: 200px;
-            border: solid 1px white;
-        }
-        .jogo4 img{
-            width: 100%;
-            border-radius: 20px;
-        }  
-        .jogo5{
-            margin-left: 10px;
-            border-radius: 20px;
-            display: flex;
-            width: 200px;
-            height: 200px;
-            border: solid 1px white;
-        }
-        .jogo5 img{
-            width: 100%;
-            border-radius: 20px;
-        }  
-        .jogo6{
-            margin-left: 10px;
-            border-radius: 20px;
-            display: flex;
-            width: 200px;
-            height: 200px;
-            border: solid 1px white;
-        }
-        .jogo6 img{
-            width: 100%;
-            border-radius: 20px;
-        }  
-        @media screen and (min-width: 500px) and (max-width: 301){
-   
         }
     </style>
+    <title>Document</title>
 </head>
 <body>
-<header>
-    <nav class="navegacao">
-        <ul class="menu">
-            <a href="./roms.html"><li class="itens">Emuladores</li></a>
-            <a href="./emuladores.html"><li class="itens">Roms</li></a>
-            <a href="./jogosapk.html"><li class="itens">Android</li></a>
-            <a href="./portifolio.html"><li class="itens">Portifolio</li></a>
-            <a href="./formulario_contato.html"><li class="itens">Contato</li></a>
-        </ul>
-    </nav>
-</header>
-<div class="adossantos">
-    <img src="./_imagens/devadossantos.jpg">
-    </div>
+    <p id="id1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eros sapien, imperdiet sed varius nec, sollicitudin sed dui. Curabitur vel finibus dolor. Quisque in placerat ligula. Ut consequat, ante at semper congue, metus neque posuere libero, sit amet tincidunt mi mi tincidunt nulla. Ut porttitor a nisi quis semper. Aliquam eget arcu tincidunt, dignissim felis vel, faucibus ligula. Ut nec posuere tortor. Aliquam dolor neque, pharetra quis faucibus vel, dictum varius nisi. Cras non risus sagittis, iaculis arcu et, vehicula sapien. Mauris sit amet vulputate dolor. Fusce dictum mauris lorem, at tempor diam vehicula ut.</p>
 
-<div class="top6">
-<div class="jogo1">
-    <img src="./_imagens/jogo1.jpg">
-</div>
-<div class="jogo2">
-    <img src="./_imagens/metroid1.jpg">
-</div>
-<div class="jogo3">
-    <img src="./_imagens/jogo3.jpg">
-</div>
-<div class="jogo4">
-    <img src="./_imagens/jogo4.jpg">
-</div>
-<div class="jogo5">
-    <img src="./_imagens/jogo5.jpg">
-</div>
-<div class="jogo6">
-    <img src="./_imagens/jogo6.jpg">
-</div>
-</div>
+    <p id="id2">Cras interdum fermentum vehicula. Fusce eget nisl a est congue porta ac vel eros. Pellentesque libero purus, aliquam et neque sit amet, tincidunt laoreet justo. Aenean sed mattis elit. Quisque porttitor sodales pulvinar. Vestibulum finibus posuere ante, vel malesuada quam scelerisque ac. Maecenas tincidunt elit vitae urna elementum porttitor. In nec nunc sem.</p>
 </body>
 </html>
-
