--- a/portifolio.html
+++ b/portifolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./_style/styleroms.css">
-    <title>- PortalGamer🎮 - Roms</title>
+    <title>- PortalGamer🎮 - Portifolio</title>
 </head>
 <body>
     <h1>Em desenvolvimento <br> Dev Anisio Gustavo</h1>
