--- a/emuladores.html
+++ b/emuladores.html
@@ -15,12 +15,12 @@
         <img id="background" src="./_imagens/basquete2.png">
         <img id="background1" src="./_imagens/devadossantos.jpg">
 
-            <img class="emulador1" src="./_imagens/emulador1.png">
-            <img class="emulador2" src="./_imagens/emulador2.png">
-            <img class="emulador3" src="./_imagens/emulador3.png">
-            <img class="emulador4" src="./_imagens/emulador4.png">
-            <img class="emulador5" src="./_imagens/emulador5.jpg">
-            <img class="emulador6" src="./_imagens/emulador6.png">
+        <a href="./_Downloads/zsnes151(1).zip"><img class="emulador1" src="./_imagens/emulador1.png"></a>
+        <a href="./_Downloads/Project64-3.0.1-5664-2df3434.zip"><img class="emulador2" src="./_imagens/emulador2.png"></a>
+        <a href="./_Downloads/emurayden-2.2.zip"><img class="emulador3" src="./_imagens/emulador3.png"></a>
+        <a href="#"><img class="emulador4" src="./_imagens/emulador4.png"></a>
+        <a href="#"><img class="emulador5" src="./_imagens/emulador5.jpg"></a>
+        <a href="#"><img class="emulador6" src="./_imagens/emulador6.png"></a>
 
 
     <footer id="rodape">
